# minecraft_computer

./: .gitignore  .gitmodules  Architecture.md  Instruction Set.md  Instruction Set.ods  README.md  notes
.obsidian/: workspace.json
codegen/: generate_computer.py  main.py
computer/: output.py
computer/assembler/: __main__.py  instruction.py  listings.py  main.py  parse.py
computer/assembler/tests/: add.asm  const.asm  loop.asm
computer/codegen/: block.py  chain_context.py  command.py  constant.py  coordinates.py  entity.py  execute.py  output.py  variable.py  vector_variable.py
computer/computer/: __main__.py  arithmetic.py  card.py  clone.py  constant.py  generate_computer.py  jump.py  layout.py  logging.py  memory.py  registers.py
computer/integration_tests/: __main__.py  four_function.py
docs/: Assembler.md  Schematic Assembler.md
journals/: 2024-04-16.md  2024-05-07.md  2024-05-21.md  Character Device.md  Plan for week of the 14th-21st.md  Template.md
schematic_assembler/: .gitignore  Cargo.toml  build_schematics.sh
schematic_assembler/schematic_assembly/: command_block.blk  cube.blk
schematic_assembler/src/: main.rs
schematic_writer/: Cargo.toml
schematic_writer/src/: blocks.rs  lib.rs  nbt_tag_extensions.rs  palette.rs  varint.rs
