[package]
name = "schematic_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.0"
quartz_nbt = { path = "../quartz_nbt" }
schematic_writer = { path = "../schematic_writer" }
